# blog

./: README.md  db.sqlite3  pyproject.toml  requirments.txt
blog/: settings.py  urls.py
main/: admin.py  forms.py  models.py  sitemaps.py  slug.py  urls.py  views.py
main/management/commands/: factory.py
main/migrations/: 0001_initial.py  0002_comment.py  0003_alter_comment_options_alter_comment_name_and_more.py  0004_alter_comment_email.py  0005_alter_comment_name.py  0006_post_tags.py  0007_alter_post_status.py  0008_alter_post_status_category_post_category.py  0009_category_avatar.py  0010_alter_post_body.py  0011_alter_post_body.py  0012_alter_post_body.py  0013_alter_comment_options_comment_level_comment_lft_and_more.py  0014_alter_category_table.py
main/templates/main/: addpost.html  category.html  comment_form.html  latest_posts.html  post_detail.html  post_list.html  post_list_category.html  post_update.html  search.html
main/templatetags/: main_tags.py
myauth/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
myauth/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_options.py
myauth/templates/myauth/: change_password.html  login.html  prof_update.html  profile.html  profile_detail.html  profile_update.html  reset_password.html  user_form.html
myauth/templates/registration/: login.html
static/css/: mystyle.css
templates/: index.html  menu.html  root.html  sidebar.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
