[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["IngvarOrlov <kampaiski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^24.8.0"
factory-boy = "^3.3.0"
gunicorn = "^22.0.0"
django = "^5.0.4"
django-taggit = "^5.0.1"
markdown = "^3.6"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pillow = "10.1.0"
social-auth-app-django = "^5.4.1"
python-dotenv = "^1.0.1"
django-mptt = "^0.16.0"
django-ckeditor = "^6.7.1"
django-ckeditor-5 = "^0.2.13"
django-cleanup = "^8.1.0"
django-debug-toolbar = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
